# engine

./: .gitignore  CMakeLists.txt
include/: IndexBuffer.hpp  Light.hpp  Mesh.hpp  ModelGameObject.hpp  QuadGeometry.hpp  ResourceManager.hpp  Skybox.hpp  Texture.hpp  TextureType.hpp  VertexArray.hpp
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  CubeGeometry.hpp  CubeMap.cpp  CubeMap.hpp  DrawData.cpp  DrawData.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  Geometry.cpp  Geometry.hpp  GeometryVertex.cpp  GeometryVertex.hpp  IndexBuffer.cpp  Light.cpp  LightDrawData.cpp  LightDrawData.hpp  LightGameObject.cpp  LightGameObject.hpp  Main.cpp  Material.cpp  Material.hpp  Mesh.cpp  ModelDrawData.cpp  ModelDrawData.hpp  ModelGameObject.cpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  SkyboxGeometry.hpp  (+12 more)
